Corrected some variable names to align with the new styles

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-color: rgba(8, 6, 6, 0.914);
+  background-color: #020202e9;
   line-height: 1.5rem;
   font-family: "Roboto", sans-serif;
 }
@@ -21,32 +21,65 @@ main {
 
 h1 {
   color: var(--logo);
-  font-size: 4rem;
-  line-height: 4rem;
+  font-size: 3rem;
+  line-height: 3rem;
 }
 
 h2 {
-  background-color: white;
+  color: white;
+  text-transform: capitalize;
+  font-size: 1.5rem;
+}
+
+.page-nav ul {
+  list-style-type: none;
+  padding: 0.5rem;
+  text-align: right;
+}
+
+.page-nav li {
+  display: inline-block;
+  margin-inline: 0.5rem;
+  padding: 1rem;
+  font-size: 2rem;
 }
 
 li {
   list-style: none;
   padding: 1rem;
-  border-bottom: 1px solid white;
   display: block;
   text-align: center;
 }
 
 li a {
   display: block;
+  text-decoration: none;
+  color: white;
 }
 
-.link-list a {
-  color: white;
+li a:after {
+  display: block;
+  content: "";
+  border-bottom: 2px solid var(--logo);
+  transform: scaleX(0);
+  transition: transform 250ms ease-in-out;
+}
+
+li a:hover:after {
+  transform: scaleX(0.5);
+  transform-origin: 50% 0%;
 }
 
 form {
   color: white;
+}
+
+header {
+  border-bottom: 1px solid var(--logo);
+}
+
+footer {
+  border-top: 1px solid var(--logo);
 }
 
 header,
@@ -55,25 +88,62 @@ footer {
   background-color: rgb(0, 0, 0);
 }
 
-.movie {
-  min-height: 100vh;
+.link-list a {
+  color: white;
 }
 
 .movie-area {
-  height: 100vh;
+  min-height: 100vh;
+}
+
+.results {
+  min-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .menu {
   top: 0;
-  padding: 5% 5%;
+  padding: 3% 3%;
   margin-right: 0.1rem;
-  background-color: rgb(33, 29, 29);
+  background-color: rgb(0, 0, 0);
 }
 
 .sticky {
   position: sticky;
-  top: 15rem;
+  top: 10rem;
 }
 
 .menu ul li {
   padding: 2rem 0;
+}
+
+.label {
+  color: white;
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+#search-box {
+  height: 35px;
+  width: 100%;
+  font-size: 1rem;
+  border-radius: 4rem;
+  text-align: center;
+}
+
+#go {
+  height: 35px;
+  width: 100%;
+  font-size: 1rem;
+  border-radius: 4rem;
+  text-align: center;
+  background-color: var(--logo);
+  color: white;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.poster {
+  width: 80%;
 }
